Add number words to NumbersActivity
Add a text view for each number word in the layout Numbers

--- a/app/src/main/res/layout/activity_numbers.xml
+++ b/app/src/main/res/layout/activity_numbers.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NumbersActivity">
+    tools:context=".NumbersActivity"
+    android:id="@+id/rootView"
+    android:orientation="vertical">
 
 </LinearLayout>
